--- a/package.json
+++ b/package.json
@@ -1,44 +1,20 @@
 {
-  "repository": {
-    "type": "git",
-    "url": "#"
-  },
-  "license": "UNLICENSED",
+  "name": "threejs-journey-exercise",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "build": "webpack --config ./bundler/webpack.prod.js",
-    "dev": "webpack serve --config ./bundler/webpack.dev.js"
+    "dev": "vite",
+    "build": "vite build"
+  },
+  "devDependencies": {
+    "vite": "^4.3.8",
+    "vite-plugin-glsl": "^1.1.2"
   },
   "dependencies": {
-    "@babel/core": "^7.13.1",
-    "@babel/preset-env": "^7.13.5",
-    "babel-loader": "^8.2.2",
-    "ccapture.js": "^1.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^7.0.0",
-    "css-loader": "^5.1.0",
-    "file-loader": "^6.2.0",
-    "html-loader": "^2.1.1",
-    "html-webpack-plugin": "^5.2.0",
-    "lil-gui": "^0.11.0",
-    "mini-css-extract-plugin": "^1.3.9",
-    "portfinder-sync": "0.0.2",
-    "raw-loader": "^4.0.2",
-    "spectrogram": "0.0.7",
-    "style-loader": "^2.0.0",
-    "three": "^0.126.0",
-    "vite": "^5.2.10",
-    "webpack": "^5.24.2",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.7.3"
-  },
-  "name": "butterfly-main",
-  "description": "",
-  "version": "1.0.0",
-  "main": "index.js",
-  "directories": {
-    "doc": "docs"
-  },
-  "keywords": [],
-  "author": ""
+    "lil-gui": "^0.17.0",
+    "teleportvr": "^3.0.4",
+    "three": "^0.148.0",
+    "three.js": "^0.77.1"
+  }
 }
