--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build"
   },
   "devDependencies": {
-    "vite": "^4.3.8",
+    "vite": "^4.5.3",
     "vite-plugin-glsl": "^1.1.2"
   },
   "dependencies": {
@@ -16,5 +16,13 @@
     "teleportvr": "^3.0.4",
     "three": "^0.148.0",
     "three.js": "^0.77.1"
-  }
+  },
+  "description": "",
+  "main": "vite.config.js",
+  "directories": {
+    "doc": "docs"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
