--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "threejs-journey-exercise",
-  "private": true,
+  "name": "mcvlix-github-pages",
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -20,7 +20,8 @@
   "description": "",
   "main": "vite.config.js",
   "directories": {
-    "doc": "docs"
+    "doc": "docs",
+    "src": "src"
   },
   "keywords": [],
   "author": "",
